--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Kanit&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -6,4 +8,8 @@
 
 body {
   background: #f5f5f5;
+}
+
+.kanit {
+  font-family: 'Kanit', sans-serif;
 }
